@@ -1,0 +1,1 @@
+<td><%= link_to user.name, user %></td>
