@@ -1,0 +1,2 @@
+<h3>User</h3>
+<p>Name: <%= @user.name if @user.name %></p>
